--- a/src/main/resources/templates/fragments/main_layout.html
+++ b/src/main/resources/templates/fragments/main_layout.html
@@ -6,13 +6,13 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Tarot y Astrología</title>
 <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" />
-<link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="/webjars/jquery-ui/jquery-ui.min.css" />
 <link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
 	<script src="/webjars/jquery/jquery.min.js"></script>
+	<script src="/webjars/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="webjars/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
 	
 	<div th:replace="fragments/header::header">
 	</div>
