Add astro chart

--- a/src/main/resources/templates/fragments/main_layout.html
+++ b/src/main/resources/templates/fragments/main_layout.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
+	<script src="js/astrochart.min.js"></script>
 	<script src="/webjars/jquery/jquery.min.js"></script>
 	<script src="/webjars/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="webjars/bootstrap/js/bootstrap.min.js"></script>
