--- a/src/main/resources/templates/efemerides.html
+++ b/src/main/resources/templates/efemerides.html
@@ -19,12 +19,14 @@
 			//var dataHoy = JSON.parse(/*[[${dataHoy}]]*/[]);
 			var chart = new astrology.Chart('paper', 800, 800);
 			var radix = chart.radix(data);
+			/*
 			radix.addPointsOfInterest({
 				"As" : [ data.cusps[0] ],
 				//"Ic" : [ data.cusps[3] ],
 				//"Ds" : [ data.cusps[6] ],
 				"Mc" : [ data.cusps[9] ]
 			});
+			*/
 			var aspects = radix.aspects();	
 		
 			
@@ -80,16 +82,22 @@
 			
 			
 			var table = document.createElement("table");
+			table.className="gridtable";
+			var thead = document.createElement("thead");
+			var tbody = document.createElement("tbody");
+			
 			var tr = document.createElement("tr");
-			var td = document.createElement("td");
+			var td = document.createElement("th");
 			tr.appendChild(td);
 			for (var filaKey in tablaFila) {
-				td = document.createElement("td");
+				td = document.createElement("th");
 				td.appendChild(document.createTextNode(filaKey));
 				tr.appendChild(td);
 		    }
-			table.appendChild(tr);
-
+		    thead.appendChild(tr);
+			table.appendChild(thead);
+			
+			
 			for (var filaKey in tablaFila) {
 				tr = document.createElement("tr");
 				td = document.createElement("td");
@@ -110,8 +118,9 @@
 					td.appendChild(document.createTextNode(texto));
 					tr.appendChild(td);
 				}
-				table.appendChild(tr);
+				tbody.appendChild(tr);
 		    }
+			table.appendChild(tbody);
 			document.getElementById("aspectos").appendChild(table);		
 			
 			/*
