Add SNode ang calibrate planets

--- a/src/main/resources/templates/efemerides.html
+++ b/src/main/resources/templates/efemerides.html
@@ -43,11 +43,7 @@
 					Uranus: {},
 					Neptune: {},
 					Pluto: {},
-					Chiron: {},
-					Lilith: {},
-					NNode: {},
-					As: {},
-					Mc: {}
+					NNode: {}
 			};
 			
 			function tablaCol() {
@@ -62,11 +58,7 @@
 					Uranus: {},
 					Neptune: {},
 					Pluto: {},
-					Chiron: {},
-					Lilith: {},
-					NNode: {},
-					As: {},
-					Mc: {}
+					NNode: {}
 				};
 			};
 
@@ -123,38 +115,7 @@
 			table.appendChild(tbody);
 			document.getElementById("aspectos").appendChild(table);		
 			
-			/*
-			var a = 0;
-			var ul = document.createElement("ul");
-		    lasp.forEach(function(lAsp) {
-		      var li = document.createElement("li");
-	    	  var nul = document.createElement("ul");
-	    	  var liasp = document.createElement("li");
-	    	  liasp.appendChild(document.createTextNode("Aspecto:"));
-	    	  liasp.appendChild(document.createTextNode(lAsp["aspect"].name));
-	    	  liasp.appendChild(document.createTextNode(" grados:" + lAsp["aspect"].degree));
-	    	  liasp.appendChild(document.createTextNode(" orbit:" + lAsp["aspect"].orbit));
-	    	  nul.appendChild(liasp);
-	    	  var lpoint = document.createElement("li");
-	    	  lpoint.appendChild(document.createTextNode("Name:"));
-	    	  lpoint.appendChild(document.createTextNode(lAsp["point"].name));
-	    	  lpoint.appendChild(document.createTextNode(" position:" + lAsp["point"].position));
-	    	  nul.appendChild(lpoint);
-	    	  var lprecision = document.createElement("li");
-	    	  lprecision.appendChild(document.createTextNode("Precision:"));
-	    	  lprecision.appendChild(document.createTextNode(lAsp["precision"]));
-	    	  nul.appendChild(lprecision);
-	    	  var topoint = document.createElement("li");
-	    	  topoint.appendChild(document.createTextNode("Name:"));
-	    	  topoint.appendChild(document.createTextNode(lAsp["toPoint"].name));
-	    	  topoint.appendChild(document.createTextNode(" position:" + lAsp["toPoint"].position));
-	    	  nul.appendChild(topoint);
-	    	  li.appendChild(nul);
-	    	  ul.appendChild(li);
-		    });
-			document.getElementById("aspectos").appendChild(ul);			
-			
-			*/
+		
 			
 			/*		
 			var chartHoy = new astrology.Chart('paperhoy', 800, 800);
