--- a/src/main/resources/templates/efemerides.html
+++ b/src/main/resources/templates/efemerides.html
@@ -43,7 +43,8 @@
 					Uranus: {},
 					Neptune: {},
 					Pluto: {},
-					NNode: {}
+					NNode: {},
+					SNode: {}
 			};
 			
 			function tablaCol() {
@@ -58,7 +59,8 @@
 					Uranus: {},
 					Neptune: {},
 					Pluto: {},
-					NNode: {}
+					NNode: {},
+					SNode: {}
 				};
 			};
 
