--- a/src/main/resources/templates/efemerides.html
+++ b/src/main/resources/templates/efemerides.html
@@ -19,6 +19,8 @@
 			//var dataHoy = JSON.parse(/*[[${dataHoy}]]*/[]);
 			var chart = new astrology.Chart('paper', 800, 800);
 			var radix = chart.radix(data);
+			var kk = new aspects.createGrid('kk');
+			kk.SEXTIL;
 			/*
 			radix.addPointsOfInterest({
 				"As" : [ data.cusps[0] ],
