--- a/src/main/resources/templates/fragments/main_layout.html
+++ b/src/main/resources/templates/fragments/main_layout.html
@@ -14,6 +14,7 @@
 	<script src="/webjars/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="webjars/bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/astrochart.js"></script>
+	<script src="js/aspectsgrid.js"></script>
 	
 	<div th:replace="fragments/header::header">
 	</div>
