--- a/src/main/resources/templates/efemerides.html
+++ b/src/main/resources/templates/efemerides.html
@@ -19,7 +19,7 @@
 			//var dataHoy = JSON.parse(/*[[${dataHoy}]]*/[]);
 			var chart = new astrology.Chart('paper', 800, 800);
 			var radix = chart.radix(data);
-			var kk = new aspects.createGrid('kk');
+			var kk = new jmeaspects.createGrid('kk');
 			kk.SEXTIL;
 			/*
 			radix.addPointsOfInterest({
