added zodiac palnets cusp

--- a/src/main/resources/templates/efemerides.html
+++ b/src/main/resources/templates/efemerides.html
@@ -162,8 +162,8 @@
 			<div class="col" th:text="${cuspEphemeris}">Cusp Ephemeris</div>
 		</div>
 		<div class="row">
-			<div class="col" th:text="${horoscoptxt}">Horóscopo</div>
-		</div>
+			<div class="col" th:text="${spjson}">spjson</div>
+		</div>		
 		<div class="row">
 			<div class="col" id="paper"></div>
 		</div>
