resto de tablas

--- a/src/main/resources/templates/efemerides.html
+++ b/src/main/resources/templates/efemerides.html
@@ -74,9 +74,14 @@
 				asp.draw(lasp);
 				
 				var mydata = JSON.parse(/*[[${spjson}]]*/[]);
+				var planetasCuspides = JSON.parse(/*[[${planetasCuspidesjson}]]*/[]);
 				
-				var asp2 = new aspects.CuspidesZodiac('aspects', 200, 600);
+				
+				var asp2 = new aspects.CuspidesZodiac('aspectos', 400, 800);
 				asp2.drawCuspidesZodiac(mydata);
+				
+				var asp3 = new aspects.PlanetsZodiac('aspectos3', 500, 800);
+				asp3.drawPlanetsZodiac(mydata, planetasCuspides);
 				
 				var table = document.createElement("table");
 				table.className="gridtable";
@@ -183,6 +188,9 @@
 			<div class="col" th:text="${spjson}">spjson</div>
 		</div>		
 		<div class="row">
+			<div class="col" th:text="${data}">data</div>
+		</div>		
+		<div class="row">
 			<div class="col" id="paper"></div>
 		</div>
 		<div class="row">
@@ -190,6 +198,9 @@
 		</div>
 		<div class="row">
 			<div class="col" id="aspectos"></div>
+		</div>
+		<div class="row">
+			<div class="col" id="aspectos3"></div>
 		</div>
 		<div class="row">
 			<div class="col">
