--- a/src/main/resources/templates/fragments/cartanatal.html
+++ b/src/main/resources/templates/fragments/cartanatal.html
@@ -8,6 +8,10 @@
 	<div th:fragment="cartanatal">
 		<script type="text/javascript">
 		$( function() {
+		      $('#paises').change(function() {
+		    	  alert( this.value );
+		      });	
+
 				$('#fechaNacimiento').datepicker();
 				$.widget( "ui.timespinner", $.ui.spinner, {
 				      options: {
@@ -57,11 +61,19 @@
 					</div>
 					<div class="form-group">
 						<label for="pais">Pa&iacute;s</label>
-						<input type=text class="form-control" id="pais" th:field="*{pais}" placeholder="Pa&iacute;s" />
+						<select class="form-control" name="paises" id="paises" th:field="*{pais}" placeholder="Selecciona el país de nacimiento">
+							<option value="0">Selecciona el pa&iacute;s de nacimiento</option>
+							<option th:each="p:${paises}" th:value="${p.stateid}" th:text="${p.statename}"></option>
+						</select>
 					</div>
 					<div class="form-group">
 						<label for="horaMinutos">Ciudad</label>
+						<select class="form-control" name="ciudades" id="ciudades" th:field="*{ciudad}" placeholder="Selecciona la ciudad de nacimiento">
+							<option value="0">Selecciona la ciudad de nacimiento</option>
+							<option th:each="c:${ciudades}" th:value="${c.paisID}" th:text="${p.pais}"></option>
+						</select>
 						<input type=text class="form-control" id="ciudad" th:field="*{ciudad}" placeholder="Ciudad" />
+
 					</div>
 					<button type="submit" class="btn btn-primary">Ver carta</button>
 				</form>
